--- a/exercicios/exe022/fundo002.html
+++ b/exercicios/exe022/fundo002.html
@@ -6,7 +6,9 @@
     <title>pesonalizacão dos fundos</title>
     <style>
        body {
-        border-image: url(imagems/wallpaper001.jpg);
+        background-image: url(imagems/wallpaper001.jpg);
+        background-size: 100px 100px;
+        background-repeat: repeat;
        }
     </style>
 </head>
