--- a/exercicios/exe022/fundo006.html
+++ b/exercicios/exe022/fundo006.html
@@ -6,17 +6,20 @@
     <title>Document</title>
     <style>
         body {
-            height: 100vh;
+           height: 100vh;
             background-color: black;
             background-image: url(imagems/wallpaper002.jpg);
             background-position: center top;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            background: black url(imagems/wallpaper002.jpg) center center no-repeat cover fixed;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +30,16 @@
 <body>
     <main>
         <h1>teste de imagem de fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aspernatur, placeat et dolores, quaerat omnis amet veniam dolore eveniet sunt reiciendis fuga neque ab perspiciatis facere dicta. Amet, sit dolore! Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium id doloremque alias, aliquam in pariatur illo odit molestias facilis earum esse eum, blanditiis dolores laborum cupiditate. Omnis quod soluta nulla. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore saepe voluptatem inventore impedit veniam laboriosam ullam dolorum facilis, magnam illum blanditiis sequi. Similique blanditiis exercitationem, alias facilis minima rem corporis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium aspernatur, placeat et dolores, quaerat omnis amet veniam dolore eveniet sunt reiciendis fuga neque ab perspiciatis facere dicta. Amet, sit dolore! Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+           <p> Accusantium id doloremque alias, aliquam in pariatur illo odit molestias facilis earum esse eum, blanditiis dolores laborum cupiditate. Omnis quod soluta nulla.</p>
+            <p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore saepe voluptatem inventore impedit veniam laboriosam ullam dolorum facilis, magnam illum blanditiis sequi.</p>
+            <p> Similique blanditiis exercitationem, alias facilis minima rem corporis. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatibus delectus nesciunt rerum sequi aperiam saepe velit sit aliquid molestiae, doloremque debitis eaque quibusdam voluptas dolore commodi tempora ullam repellendus culpa.</p>
+              <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. At dolorem quos temporibus nam sapiente omnis rerum numquam quia similique corporis quam cum quis dolor hic, beatae aliquid? Repellendus, animi earum. Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Aliquam similique, corporis rem sint id quis aliquid consectetur saepe. Vitae quia eaque ea, perspiciatis amet quaerat quidem qui illum temporibus sequi. Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+                <p> Dolorem aut labore velit voluptatum corporis inventore accusamus quod, expedita iure ea iste accusantium, aliquid voluptates magni facere quidem, error nesciunt corrupti.</p>
+                <p> Dolorem aut labore velit voluptatum corporis inventore accusamus quod, expedita iure ea iste accusantium, aliquid voluptates magni facere quidem, error nesciunt corrupti.</p>
+                <p> Dolorem aut labore velit voluptatum corporis inventore accusamus quod, expedita iure ea iste accusantium, aliquid voluptates magni facere quidem, error nesciunt corrupti.</p>
     </main>
 </body>
 </html>
