--- a/exercicios/exe023/tabela001.html
+++ b/exercicios/exe023/tabela001.html
@@ -4,11 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        table {
+            width: 400px;
+            height: 400px;
+            border-collapse: collapse;
+        }
+
+        td {
+            border: 1px solid black;
+            padding: 8px;
+            text-align: center;
+            vertical-align: bottom;
+        }
+
+        .numero {
+            text-align: right;
+        }
+    </style>
 </head>
 <body>
     <h1>Minha primeira tabela</h1>
     <table>
-        
+        <tr>
+            <td>A1</td>
+            <td>B1</td>
+            <td>C1</td>
+        </tr>
+        <tr>
+            <td>A2</td>
+            <TD>B2</TD>
+            <TD class="numero">C2</TD>
+        </tr>
+        <tr>
+            <td>A3</td>
+            <TD>B3</TD>
+            <TD class="numero">C3</TD>
+        </tr>
+        <TR>
+            <TD>A4</TD>
+            <TD>B4</TD>
+            <TD>C4</TD>
+        </TR>
     </table>
 </body>
 </html>
